julien mode added, options page set up with import/export and delete data features

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>my ext option page</title>
+    <link rel="stylesheet" href="/src/assets/styles/index.css">
   </head>
 
   <body>
