--- a/src/options/index.html
+++ b/src/options/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <title>my ext option page</title>
     <link rel="stylesheet" href="/src/assets/styles/index.css">
+    <style>
+      body {
+        background-color: hsl(220, 20%, 15%);
+        margin: 0;
+        padding: 0;
+        min-height: 100vh;
+      }
+    </style>
   </head>
 
   <body>
