--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>my ext popup page</title>
+    <title>101tabs popup page</title>
     <link rel="stylesheet" href="/src/assets/styles/index.css">
   </head>
 
