--- a/src/options/index.html
+++ b/src/options/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>my ext option page</title>
+    <title>101tabs option page</title>
     <link rel="stylesheet" href="/src/assets/styles/index.css">
     <style>
       body {
